# izhnet

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: spikes.csv  spikes_cli.csv  sweeps_run_0000.csv  sweeps_run_0001.csv  sweeps_run_0002.csv
include/izhnet/core/: types.hpp
include/izhnet/io/: spike_logger.cpp  spike_logger.hpp
include/izhnet/model/: izhikevich.cpp  izhikevich.hpp
include/izhnet/network/: network.cpp  network.hpp
include/izhnet/sim/: simulator.cpp  simulator.hpp
scripts/: raster.py
src/: main.cpp
src/core/: types.hpp
